fix(css): empty activities gap + body height

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ html * {
 
 html, body {
     max-width: 100%;
+    min-height: 100%;
     overflow-x: hidden !important;
     padding: 0 !important;
 }
